--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -1,6 +1,6 @@
 {
-  "title": "My name is Đỗ Công Sơn I'm a front-end developer",
-  "description": "As a final year student passionate about front-end development and UI/UX design, I leverage my skills to solve user interface challenges and craft exceptional user experiences. I am a dedicated learner, constantly expanding my knowledge of new technologies and best practices to enhance my abilities. My goal is to become a highly skilled software developer, creating innovative and efficient web and mobile applications.",
+  "title": "My name is Đỗ Công Sơn I'm a web developer",
+  "description": "Detail-oriented Full Stack Engineer with a passion for crafting elegant and efficient web solutions. Proficient in React, Node.js, Express.js, and\nMongoDB. Eager to contribute to innovative projects.",
   "nav": [
     {
       "title": "Home",
