--- a/src/assets/lang/vn.json
+++ b/src/assets/lang/vn.json
@@ -1,6 +1,6 @@
 {
-  "title": "Tôi là Đỗ Công Sơn và là một lập trình viên Front-end",
-  "description": "Là một sinh viên năm cuối đam mê phát triển front-end và thiết kế UI/UX, tôi tận dụng các kỹ năng của mình để giải quyết các vấn đề về giao diện người dùng và tạo ra trải nghiệm người dùng tuyệt vời. Tôi là một người chăm chỉ, không ngừng mở rộng kiến thức về các công nghệ và các phương pháp mới để nâng cao khả năng của mình. Mục tiêu của tôi là trở thành một nhà phát triển phần mềm có kỹ năng cao, tạo ra các ứng dụng web và di động sáng tạo và hiệu quả.",
+  "title": "Tôi là Đỗ Công Sơn và là một lập trình viên website",
+  "description": "Tôi là một lập trình viên website đam mê xây dựng các giải pháp web hiệu quả và đẹp mắt. Thành thạo các công nghệ React, Node.js, Express.js và MongoDB. Sẵn sàng đóng góp vào các dự án sáng tạo.",
   "nav": [
     {
       "title": "Trang chủ",
